<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Restaurant Express</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Restaurant Express</string>
    <string name="text_hoes_here_lol">Welcome to Restaurant Express!</string>
    <string name="menu_display_image">What will you like to have</string>
    <string name="add_to_my_menu_">Update</string>
    <string name="add_order">Add to Order</string>
    <string name="title_activity_home">Select an Option</string>
    <string name="action_settings">Settings</string>
    <string name="view_update_menu">Menu Management</string>
    <string name="take_order">Order Management</string>
    <string name="title_activity_update_items">Update Menu Items</string>
    <string name="title_text">Menu Item</string>
    <string name="confirm_delete">Delete Item</string>
    <string name="really_delete">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_item_button">Add Item</string>
    <string name="confirm_cancel">Confirm Cancel</string>
    <string name="really_cancel">Are you sure you want to cancel?</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_table">Table Order Status</string>
    <string name="title_activity_registration">Registration</string>

    <string name="invalid_user_name">Invalid User Name</string>

    <string name="error_inregistration">Error In Registration</string>
    <string name="title_activity_example">ExampleActivity</string>

</resources>