<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/test_image"
            android:src="@drawable/koala"
            android:contentDescription="@string/menu_display_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </ImageView>
        <View
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_gravity="top"
            android:background="#AA000000"
            ></View>

        <TextView
            android:id="@+id/title"
            android:text="@string/text_hoes_here_lol"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:layout_gravity="top|right"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            />

    </FrameLayout>
    <TextView
        android:id="@+id/description"
        android:text=" Welcome to Demo Restauarnt, From a luscious slice of the Cheesecake Factory’s Godiva chocolate cheesecake to a meal of Rainbow and Negihama rolls from Hapa Sushi or our very own Barbeque Chicken Pizza for a crowd, we have it all.\nPlease Take your time to peruse this Digital Menu. Choose an Iten from the left sidebar and add to to your order by pressing the blue button."
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20dp"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/fragment_button_center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:textSize="18dp"
            android:text="@string/take_order"
            android:background="@drawable/button_style"
            android:shadowRadius="10"
            android:shadowColor="@android:color/white"
            android:shadowDx="1"
            android:shadowDy="1"
            android:layout_weight="50"
            android:padding="5dp"
            style="@style/button_text"
            android:onClick="takeOrder"
            />
        <Button
            android:id="@+id/fragment_button_left"
            android:padding="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:textSize="18dp"
            android:text="@string/view_update_menu"
            android:background="@drawable/button_style"
            android:shadowRadius="10"
            android:shadowColor="@android:color/white"
            android:shadowDx="1"
            android:shadowDy="1"
            android:layout_weight="50"
            style="@style/button_text"
            android:onClick="viewUpdateMenu"
            />
    </LinearLayout>


</LinearLayout>